# v_coio

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  main.cc
coio/: CMakeLists.txt  coio.h
coio/codec/: codec_http.h  codec_simple.h
coio/common/: logger.h  noncopyable.h  singleton.h
coio/cosys/: coev.cc  coev.h  context.h  cosyscall.h  syscall.h  syscall_posix.cc  syscall_win.cc  sysinc.h
coio/net/: accepter.h  codec.h  connection.h  netaddr.h  protocol.h  protocol_tcp.h  socket.h
conet/: CMakeLists.txt
conet/coroutine/: context.h  coroutine.h  exeunit.h  fcontext.h  stack_allocator_basic.h  stack_traits.h
conet/coroutine/win/: stack_traits.cc
example/: CMakeLists.txt
example/http/: codec_http.h  http_client.cc  http_server.cc
testcase/: CMakeLists.txt
